# Fire-Alarm-Real-Time-Simulation

./: .gitignore  README.md  app.py  charts.py  pyproject.toml  simulation.py  strings_ru.py  ui.py
assets/: zones_layout.json
tests/: test_simulation.py  test_zones_layout.py
